--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,5 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="col-md-6 offset-md-3">
+    <h1>Register</h1>
+    <br />
+    <form method="POST" action="">
+        {% csrf_token %}
+
+        {% if from.errors %}
+            <div class="alert alert-warming alert-dismissible fade show" role="alert">
+                Your Form Has errors
+                {% for field in form %}
+                    {% if field.errors %}
+                        {{field.errors}}
+                    {% endif %}
+                {% endfor %}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" >
+                </button>
+            </div>
+        {% endif %}
+
+        {{form.as_p}}
+        <button type="submit" class="btn btn-secondary">Register</button>
+    </form>
+</div>
 
 {% endblock %}
